charts/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system 
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "jeremymr.dev"
    - "*.jeremymr.dev"
    - "kleff.io"
    - "*.kleff.io"
  # HTTPS for jeremymr.dev
  - port:
      number: 443
      name: https-jeremy
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: homelab-cert
    hosts:
    - "jeremymr.dev"
    - "*.jeremymr.dev"

  - port:
      number: 443
      name: https-kleff
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kleff-io-tls
    hosts:
    - "kleff.io"
    - "*.kleff.io"
