charts/istio/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "argocd.jeremymr.dev"
spec:
  hosts:
  - "argo.jeremymr.dev"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
