charts/istio/authentik-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentik-vs
  namespace: authentik
spec:
  hosts:
  - "auth.jeremymr.dev"
  gateways:
  - istio-system/kleff-gateway
  http:
  - route:
    - destination:
        host: authentik-server
        port:
          number: 80
