charts/istio/couchdb-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: couchdb-vs
  namespace: couchdb
spec:
  hosts:
  - "couchdb.jeremymr.dev"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: couchdb-svc-couchdb
        port:
          number: 5984
