charts/istio/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "grafana.jeremymr.dev"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-grafana
        port:
          number: 80
